[GPU Process] [iOS] Sometimes the text drop shadow is not drawn https://bugs.webkit.org/show_bug.cgi?id=236923 rdar://89196794

Reviewed by Simon Fraser.

Source/WebCore:

The baseCTM of internal context of DrawGlyphsRecorder has to match the
baseCTM of the owner DisplayList::Recorder.

When recording the glyph runs, DrawGlyphsRecorder::recordDrawGlyphs()
updates the shadow of the recorder such that ShadowsIgnoreTransforms is
set to "false". That means no shadow transformation will be applied to
the offset or the blur radius in GPUP.

* platform/graphics/DrawGlyphsRecorder.h:
* platform/graphics/coretext/DrawGlyphsRecorderCoreText.cpp:
(WebCore::DrawGlyphsRecorder::DrawGlyphsRecorder):
(WebCore::DrawGlyphsRecorder::populateInternalState):
* platform/graphics/displaylists/DisplayListRecorder.cpp:
(WebCore::DisplayList::Recorder::Recorder):
* platform/graphics/harfbuzz/DrawGlyphsRecorderHarfBuzz.cpp:
(WebCore::DrawGlyphsRecorder::DrawGlyphsRecorder):
* platform/graphics/win/DrawGlyphsRecorderWin.cpp:
(WebCore::DrawGlyphsRecorder::DrawGlyphsRecorder):
* rendering/RenderThemeIOS.mm:
(WebCore::paintAttachmentText):

LayoutTests:

Unskip failed the text drop shadow layout test.

* platform/ios-wk2/TestExpectations:



Canonical link: https://commits.webkit.org/249192@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292294 268f45cc-cd09-0410-ab3c-d52691b4dbfc